# qa-automation-mcp-server

./: .dockerignore  .gitignore  Dockerfile  IMPLEMENTATION_PLAN.md  QA_AUTOMATION_TOOLS_SPEC.md  README.md  agent_instructions.md  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  record.py
automations/default/: cdp-login-test.json  hr-portal-attendance-and-hire.json  hr-portal-login.json  login-flow.json  my-login-flow.json  ob-hire-associate.json  test-auto.json  test-cdp-debug.json  test-cdp-login.json  test-cdp-v2.json  test-cdp-v3.json  test-manual-v2.json  test-manual-v3.json  test-manual-v4.json  test-manual-v5.json  test-manual.json  test-write-test.json
automations/ekta10/: ekta10-ob-login.json
automations/ekta5/: ekta5-hire-associate.json  ekta5-ob-auth-login.json
automations/ekta7/: ekta7-hr-playground-login.json
automations/ekta8/: ekta8-ob-hr-login.json
automations/ekta9/: ekta-hr-playground-login.json  ekta9-hr-playground-login.json
docs/: TECH_SPEC_BATCH_REPLAY.md  recording-tools-spec.md
helpers/: session_store.py
intelligent-automation/: SKILL.md
mcp_tools/: _recording_helper.py  assertions.py  batch_replay.py  console.py  dialog.py  dom.py  form.py  health.py  human_recording.py  iframe.py  logging_utils.py  manifest.py  navigate.py  network.py  recording.py  replay.py  screenshots.py  session.py  session_logging.py  storage.py  tabs.py  tracing.py  upload.py  wait.py
plans/: phase1-logging-plan.md
templates/: report.html
tests/: test_integration_logging.py  test_logging_utils.py  test_session_logging.py
(+78 files in other folders)
